# sierpinski

./: CMakeLists.txt  CPPLINT.cfg  Cargo.toml  README.md
docs/: CMakeLists.txt  Doxyfile.in
include/common/: types.h
include/graphics/: screen.h
include/util/: triangles.h
scripts/: build.sh  clean.sh  config.sh
src/: CMakeLists.txt  lib.rs  main.rs
src/graphics/: CMakeLists.txt  screen.cpp
src/sierpinski/: CMakeLists.txt  sierpinski.cpp
src/util/: CMakeLists.txt  triangles.cpp
